[gd_scene load_steps=40 format=2]

[ext_resource path="res://Prefabs/Castle.tscn" type="PackedScene" id=1]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/UnitTentPopupNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/LumberMillScene.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/Doge.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/Kar.tscn" type="PackedScene" id=7]
[ext_resource path="res://SFX/unit1_spawn_sound.wav" type="AudioStream" id=8]
[ext_resource path="res://SFX/Negative_Sound.wav" type="AudioStream" id=9]
[ext_resource path="res://SFX/level_completed.wav" type="AudioStream" id=10]
[ext_resource path="res://Sprites/bayrak.png" type="Texture" id=11]
[ext_resource path="res://SFX/BeachFinal.wav" type="AudioStream" id=12]
[ext_resource path="res://SFX/difficulty_increase.wav" type="AudioStream" id=13]
[ext_resource path="res://SFX/castle_upgrade.wav" type="AudioStream" id=14]
[ext_resource path="res://SFX/first_yeti_spawn.wav" type="AudioStream" id=15]
[ext_resource path="res://Prefabs/MessengerPrefabs/MessengerMap.tscn" type="PackedScene" id=16]
[ext_resource path="res://Prefabs/LumberMillEnterance.tscn" type="PackedScene" id=17]
[ext_resource path="res://SFX/intro_boss.ogg" type="AudioStream" id=19]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 11 )
region = Rect2( 10, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 11 )
region = Rect2( 20, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 11 )
region = Rect2( 30, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 11 )
region = Rect2( 40, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 11 )
region = Rect2( 50, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 11 )
region = Rect2( 60, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 70, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 80, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 90, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 100, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 110, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 120, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 130, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 140, 0, 10, 36 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 150, 0, 10, 36 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 0.535446, 15.8577 )

[sub_resource type="Animation" id=19]
resource_name = "fade"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.784314, 0.784314, 0.784314, 1 ), Color( 0.796078, 0.321569, 0.321569, 1 ) ]
}

[sub_resource type="CircleShape2D" id=20]
radius = 3.71348

[sub_resource type="Animation" id=21]
resource_name = "end"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:end_the_game")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="MessengerMap" parent="." instance=ExtResource( 16 )]
position = Vector2( -562.85, 23.1999 )

[node name="Bayrak" type="AnimatedSprite" parent="."]
position = Vector2( -178.851, 4.006 )
frames = SubResource( 17 )
frame = 8
playing = true

[node name="Area2D" type="Area2D" parent="Bayrak" groups=[
"Bayrak",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bayrak/Area2D"]
shape = SubResource( 18 )

[node name="Castle" parent="." instance=ExtResource( 1 )]
position = Vector2( -50, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Kar" parent="." instance=ExtResource( 7 )]

[node name="Kar2" parent="." instance=ExtResource( 7 )]
position = Vector2( 0.129822, -75.1117 )

[node name="unit1_spawn_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.104

[node name="negative_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -9.455

[node name="Main_Difficulty_Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="repair_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
pitch_scale = 3.05

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -18.228

[node name="difficulty_increase_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -12.816
pitch_scale = 2.0

[node name="castle_upgrade" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -9.182

[node name="first_yeti_spawn" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 200, 0 )
stream = ExtResource( 15 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.784314, 0.784314, 0.784314, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasModulate"]
anims/fade = SubResource( 19 )

[node name="UnitTentPopupNode" parent="." instance=ExtResource( 4 )]
position = Vector2( -156.143, 5.923 )

[node name="LumberMillScene" parent="." instance=ExtResource( 5 )]
position = Vector2( -445.5, 155 )

[node name="GoldCheat" type="Area2D" parent="."]
position = Vector2( -237.391, 0.347412 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoldCheat"]
position = Vector2( 34.2132, -39.1957 )
shape = SubResource( 20 )

[node name="level_completed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
pitch_scale = 2.0

[node name="LumberMillEnterance" parent="." instance=ExtResource( 17 )]
position = Vector2( -226.648, 2.146 )

[node name="Doge" parent="." instance=ExtResource( 6 )]
position = Vector2( -106.878, 14.9534 )
collision_layer = 2147484672
collision_mask = 2147484672

[node name="FinalMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -8.0

[node name="EndAnimation" type="AnimationPlayer" parent="."]
anims/end = SubResource( 21 )

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 2 )
banner_on_top = false
banner_id = "ca-app-pub-3940256099942544/6300978111"
interstitial_id = "ca-app-pub-3940256099942544/1033173712"
rewarded_id = "ca-app-pub-3940256099942544/5224354917"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Main_Difficulty_Timer" to="." method="_on_Main_Difficulty_Timer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
[connection signal="mouse_entered" from="GoldCheat" to="." method="_on_GoldCheat_mouse_entered" flags=3]
[connection signal="pressed" from="LumberMillEnterance" to="." method="_on_LumberMillEnterance_pressed" flags=3]
[connection signal="interstitial_closed" from="AdMob" to="." method="_on_AdMob_interstitial_closed" flags=3]
[connection signal="interstitial_failed_to_load" from="AdMob" to="." method="_on_AdMob_interstitial_failed_to_load" flags=3]
[connection signal="interstitial_loaded" from="AdMob" to="." method="_on_AdMob_interstitial_loaded" flags=3]
[connection signal="rewarded" from="AdMob" to="." method="_on_AdMob_rewarded" flags=3]
[connection signal="rewarded_video_closed" from="AdMob" to="." method="_on_AdMob_rewarded_video_closed" flags=3]
[connection signal="rewarded_video_failed_to_load" from="AdMob" to="." method="_on_AdMob_rewarded_video_failed_to_load" flags=3]
[connection signal="rewarded_video_loaded" from="AdMob" to="." method="_on_AdMob_rewarded_video_loaded" flags=3]
